# fastapi_shop

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  styles.css
frontend/src/components/: Header.tsx  Icons.tsx  ProductCard.tsx  Toast.tsx
frontend/src/lib/: api.ts  types.ts
frontend/src/pages/: AccountPage.tsx  CartPage.tsx  CreateProductPage.tsx  HomePage.tsx  LoginPage.tsx  OrdersPage.tsx  ProductPage.tsx  RegisterPage.tsx
src/: api.py
src/auth/: depends.py  models.py  repo.py  router.py  schemas.py  services.py
src/cart/: depends.py  models.py  repo.py  router.py  schemas.py  service.py
src/core/: config.py  security.py
src/db/: __init__.py  config.py  database.py  models.py  router.py
src/jwt/: depends.py  models.py  repo.py  schemas.py  service.py
src/migrations/: env.py
src/migrations/versions/: 09a447c23e72_payments_table.py  38c3d8c2ee81_add_user_balance.py  3fc053e997c9_int_uuid.py  806694439ccb_orders_and_carts.py  9d8d0b4a6c11_order_items_price_at_purchase.py  b77ab45edfe6_int_uuid.py  c56cb9427589_.py  f74878916e2c_cart_and_orders.py  fb13d2faf292_create_tables.py
src/orders/: __init__.py  depends.py  models.py  repo.py  router.py  schemas.py  service.py
src/payments/: models.py
src/products/: __init__.py  depends.py  models.py  repo.py  router.py  schemas.py  service.py
